# StrataKV

./: .gitignore  CMakeLists.txt  Project.md  apple-silicon-notes.md
.cache/clangd/index/: arena_allocator.h.8D4961B07DB8D4C2.idx  flat_swiss_table.h.01CD1F5DDFDC304C.idx  flat_table_test.cc.63CFF60E3D3C3130.idx  map.h.77EF3C75FD21459C.idx  numa_table_entry.h.A250CCBE8D88D3A8.idx  simple_hash_table.cc.79E4A24505C54B49.idx  simple_hash_table.h.E4CC8E5C2C5FB219.idx  simple_utils.h.3AFE2F63F585CC24.idx  storage.h.AE919AEE02A44B43.idx  striped_table.h.92105D2B38A6BB15.idx  table_bucket.h.0939DDDF31922869.idx  table_bucket.h.FD3183481C51C580.idx  test_numa_table.cc.7ED87EE81B4C2065.idx  (+1 more)
.github/workflows/: ci.yml
bench/: flat_bench  flat_map_bench.cc  flat_table_bench.cc  unordered_bench  unordered_map_bench.cc
include/: SimpleHashMap.h  constants.h  sequential_table.h  simple_hash_table.h
src/: simple_hash_table.cc
stratakv/: alloc  alloc.cc  apple_sysctl.cpp  arena  arena_allocator.h  assembly_test.c  assembly_test.s  concurrent_swiss_table.h  flat_swiss_table.h  linear_table.h  map.h  memory_allocator.h  numa_shard.h  numa_table.h  numa_table_entry.h  priority_queue.h  simd  simd_guide.md  simd_utility.cc  simple_utils.h  storage.h  striped_table.h  table_bucket.h  templates.cc  unique_pointer.h  vector_asm_test.cc
tests/: CMakeLists.txt  DartConfiguration.tcl  File.cpp  flat_table_test.cc  priority_queue_tests.cc  test_numa_entry.cc  test_numa_table.cc  test_simple_hash_table.cc  unique_ptr_tests.cc
tests/tests/: stratakv_tests-b12d07c_include.cmake
